tests/NormalTests/paczka1/small_fuzzy/19582816.err
Error in line 2: Ub0qfdI S514 38,4
Error in line 4: Ub0qfdI A916 14,9
Error in line 10: A559 A559 21,
Error in line 6: wsI1y S514 9,8
